# LAB02

./: CMakeLists.txt
LAB02/: CMakeLists.txt
LAB02/include/: Any2Dec.h  Boyera.h  Dec2Any.h  Essentials.h  Palindrom.h
LAB02/src/: Any2Dec.cpp  Boyera.cpp  Dec2Any.cpp  Palindrom.cpp
LAB02/uts/: Any2Dec_tests.cpp  Boyera_tests.cpp  Dec2Any_tests.cpp  Palindrom_tests.cpp
